# random_spi_gw

./: .gitignore  meson.build
applications/: VERSION  meson.build  meson_options.txt
applications/allreduce/src/: allreduce.c  allreduce_client.c  allreduce_core.c  allreduce_daemon.c  allreduce_reducer.cu  allreduce_ucx.c  meson.build
applications/app_shield_agent/src/: app_shield_agent.c  app_shield_agent_core.c  meson.build
applications/application_recognition/src/: application_recognition.c  application_recognition_core.c  application_recognition_core.h  meson.build
applications/common/src/: doca_exception.hpp  doca_optional.hpp  doca_unique_ptr.hpp  dpi_worker.c  dpi_worker.h  flow_skeleton.c  sig_db.c  sig_db.h  telemetry.c
applications/dma_copy/src/: dma_copy.c  dma_copy_core.c  dma_copy_core.h  meson.build
applications/dns_filter/src/: dns_filter.c  dns_filter_core.c  dns_filter_core.h  dns_filter_kernel.cu  meson.build
applications/dns_filter/src/grpc/: meson.build
applications/dns_filter/src/grpc/server/: dns_filter_gRPC_server.cpp  server.hpp
applications/dpa_all_to_all/src/: build_device_code.sh  build_dpa_all_to_all.sh  meson.build
applications/dpa_all_to_all/src/device/: dpa_all_to_all_dev.c
applications/dpa_all_to_all/src/host/: dpa_all_to_all.c  dpa_all_to_all_core.c  dpa_all_to_all_core.h
applications/file_compression/src/: file_compression.c  file_compression_core.c  file_compression_core.h  meson.build
applications/file_integrity/src/: file_integrity.c  file_integrity_core.c  file_integrity_core.h  meson.build
applications/file_scan/src/: file_scan.c  file_scan_core.c  file_scan_core.h  meson.build
applications/firewall/src/: firewall.c  firewall_core.c  firewall_core.h  meson.build
applications/ips/src/: ips.c  ips_core.c  ips_core.h  meson.build
applications/ips/src/grpc/server/: ips_gRPC_server.cpp  meson.build  server.hpp
applications/ipsec_security_gw/src/: ipsec_ctx.c  meson.build
applications/l2_reflector/src/: meson.build
applications/l2_reflector/src/host/: l2_reflector.c  l2_reflector_core.c  l2_reflector_core.h  meson.build
applications/nat/src/: meson.build  nat.c  nat_core.c
applications/random_spi_gw/src/: meson.build  random_spi_gw.h
applications/secure_channel/src/: meson.build  secure_channel.c  secure_channel_core.c  secure_channel_core.h
applications/simple_fwd_vnf/src/: meson.build  simple_fwd.c  simple_fwd_ft.c  simple_fwd_pkt.c  simple_fwd_vnf.c  simple_fwd_vnf_core.c  simple_fwd_vnf_core.h
applications/switch/src/: meson.build  switch.c  switch_core.c
applications/url_filter/src/: meson.build  url_filter.c  url_filter_core.c  url_filter_core.h
applications/yara_inspection/src/: meson.build  yara_inspection.c  yara_inspection_core.c
samples/doca_apsh/: apsh_common.c
samples/doca_apsh/apsh_envars_get/: apsh_envars_get_main.c  apsh_envars_get_sample.c  meson.build
samples/doca_apsh/apsh_libs_get/: apsh_libs_get_main.c  apsh_libs_get_sample.c  meson.build
samples/doca_apsh/apsh_modules_get/: apsh_modules_get_main.c  meson.build
samples/doca_apsh/apsh_privileges_get/: apsh_privileges_get_main.c  apsh_privileges_get_sample.c  meson.build
samples/doca_apsh/apsh_pslist/: apsh_pslist_main.c  meson.build
samples/doca_apsh/apsh_threads_get/: apsh_threads_get_main.c  apsh_threads_get_sample.c  meson.build
samples/doca_apsh/apsh_vads_get/: apsh_vads_get_main.c  apsh_vads_get_sample.c  meson.build
samples/doca_comm_channel/: cc_common.c
samples/doca_comm_channel/cc_client/: cc_client_main.c  cc_client_sample.c  meson.build
samples/doca_comm_channel/cc_server/: cc_server_main.c  cc_server_sample.c  meson.build
samples/doca_common/: common_common.c  common_common.h
samples/doca_common/graph/: graph_main.c  graph_sample.c  meson.build
samples/doca_common/sync_event_dpu/: meson.build  sync_event_dpu_main.c  sync_event_dpu_sample.c
samples/doca_common/sync_event_host/: meson.build  sync_event_host_main.c  sync_event_host_sample.c
samples/doca_compress/compress_deflate/: compress_deflate_main.c  compress_deflate_sample.c  meson.build
samples/doca_dma/: dma_common.c  dma_common.h
samples/doca_dma/dma_copy_dpu/: dma_copy_dpu_main.c  dma_copy_dpu_sample.c  meson.build
samples/doca_dma/dma_copy_host/: dma_copy_host_main.c  dma_copy_host_sample.c  meson.build
samples/doca_dma/dma_local_copy/: dma_local_copy_main.c  dma_local_copy_sample.c  meson.build
samples/doca_dpa/: build_dpacc_samples.sh  dpa_common.c  dpa_common.h
samples/doca_dpa/dpa_binary_tree/: dpa_binary_tree_main.c  meson.build
samples/doca_dpa/dpa_binary_tree/host/: dpa_binary_tree_sample.c
samples/doca_dpa/dpa_diamond_tree/: dpa_diamond_tree_main.c  meson.build
samples/doca_dpa/dpa_endpoint_copy/: dpa_endpoint_copy_main.c  meson.build
samples/doca_dpa/dpa_kernel_launch/: dpa_kernel_launch_main.c  meson.build
samples/doca_dpa/dpa_wait_kernel_launch/: dpa_wait_kernel_launch_main.c  meson.build
samples/doca_dpi/: dpi_common.c  dpi_common.h
samples/doca_dpi/dpi_scan/: dpi_scan_main.c  dpi_scan_sample.c  meson.build
samples/doca_erasure_coding/erasure_coding_recover/: erasure_coding_recover_main.c  erasure_coding_recover_sample.c  meson.build
samples/doca_flow/: flow_common.c
samples/doca_flow/flow_acl/: flow_acl_main.c  flow_acl_sample.c  meson.build
samples/doca_flow/flow_aging/: flow_aging_main.c  flow_aging_sample.c  meson.build
samples/doca_flow/flow_control_pipe/: flow_control_pipe_main.c  flow_control_pipe_sample.c  meson.build
samples/doca_flow/flow_copy_to_meta/: flow_copy_to_meta_main.c  flow_copy_to_meta_sample.c  meson.build
samples/doca_rdma/: rdma_common.c  rdma_common.h
samples/flexio/flexio_rpc/host/: flexio_rpc_sample.c  meson.build
samples/flexio/flexio_window/: flexio_window_common.h  flexio_window_main.c  meson.build
samples/flexio/flexio_window/device/: flexio_window_device.c
samples/flexio/flexio_window/host/: flexio_window_sample.c  meson.build
src/: random_spi_gw.c  random_spi_gw.h  random_spi_gw_dev.c  random_spi_gw_program_args.c
(+135 files in other folders)
